--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,11 @@
+$primary-color: #f00;
+
 .App {
   text-align: center;
 }
 
 .App-header {
-  background-color: #222;
+  background-color: $primary-color;
   height: 150px;
   padding: 20px;
   color: white;
