--- a/src/App.scss
+++ b/src/App.scss
@@ -1,20 +1,3 @@
-$primary-color: #f00;
-
-.App {
-  text-align: center;
-}
-
-.App-header {
-  background-color: $primary-color;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
+.app {
+  padding-top: 55px;
 }
