Clean up responsive layout

--- a/src/components/Feature/index.scss
+++ b/src/components/Feature/index.scss
@@ -10,6 +10,7 @@
   .presence-icon {
     float: right;
     font-weight: bold;
+    color: rgba(0, 0, 0, 0.3);
     &.hasFeature {
       color: #40d9ac;
     }
