Cleanup for sharing
Update dependencies
Fix decaying code
Remove brand names
Replace icons / logos

--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -3,6 +3,10 @@
     display: none;
     margin-left: 1em;
   }
+  .logo-placeholder img {
+    max-height: 100%;
+    max-width: 100%;
+  }
 }
 
 @media (max-width: 992px) {
