--- a/src/components/Feature/index.scss
+++ b/src/components/Feature/index.scss
@@ -11,6 +11,7 @@
     float: right;
     font-weight: bold;
     color: rgba(0, 0, 0, 0.3);
+    svg { vertical-align: text-bottom }
     &.hasFeature {
       color: #40d9ac;
     }
